--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
 
     <section id="gallery" class="horizontal-section">
         <h2>Gallery</h2>
-        <p>We've carefully chosen a collection of our top cat photos, each showcasing the unique charm and playful spirit of these adorable felines. Enjoy browsing through these delightful images that capture the essence of what makes cats so special!</p>
+        <p>We've carefully chosen a collection of our top cat photos, each showcasing the unique charm and playful</p> 
+        <p>spirit of these adorable felines. Enjoy browsing through these delightful images that capture the essence of</p>
+        <p>what makes cats so special!</p>
     </section>
 
     <section id="contact" class="horizontal-section">
@@ -82,19 +84,20 @@
     </section>
 
     <!-- Star Rating Section -->
-    <section id="rating" class="horizontal-section">
-        <h2>Rate Your Favorite Cat!</h2>
+    <div id="rating">
+        <h2>Rate Our Site</h2>
         <div id="rating-container">
-            <div class="stars">
-                <span class="star" onclick="submitRating(1)">&#9733;</span>
-                <span class="star" onclick="submitRating(2)">&#9733;</span>
-                <span class="star" onclick="submitRating(3)">&#9733;</span>
-                <span class="star" onclick="submitRating(4)">&#9733;</span>
-                <span class="star" onclick="submitRating(5)">&#9733;</span>
+            <div class="stars" id="stars">
+                <span class="star" data-value="1">★</span>
+                <span class="star" data-value="2">★</span>
+                <span class="star" data-value="3">★</span>
+                <span class="star" data-value="4">★</span>
+                <span class="star" data-value="5">★</span>
             </div>
-            <p id="average-rating">Average Rating: N/A</p>
+            <p id="average-rating">Average Rating: 0%</p>
+            <p id="thank-you-message" style="display: none;">Thank you for your rating! If you have a suggestion, feel free to contact the developer.</p>
         </div>
-    </section>
+    </div>
 
     <footer>
         <p>&copy; 2024 Cute Cat Gallery. Developed by FSXstealth. Idea by dani_blob.</p>
@@ -105,65 +108,6 @@
         <p id="modal-text"></p>
     </div>
 
-    <script>
-        function showModal(text) {
-            document.getElementById('modal-text').innerText = text;
-            document.getElementById('modal').style.display = 'block';
-        }
-
-        function closeModal() {
-            document.getElementById('modal').style.display = 'none';
-        }
-
-        // Arrow navigation functionality
-        const nextArrow = document.getElementById('next-arrow');
-        const galleryContainer = document.querySelector('.gallery-container');
-        
-        nextArrow.addEventListener('click', () => {
-            galleryContainer.scrollBy({
-                top: 0,
-                left: 200, // Adjust this value based on the image width
-                behavior: 'smooth'
-            });
-        });
-
-        // Add the star rating functionality here
-        async function submitRating(rating) {
-            try {
-                const response = await fetch('http://localhost:3000/ratings', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({
-                        user_id: 1, // Replace with actual user ID if available
-                        rating: rating,
-                    }),
-                });
-
-                const data = await response.json();
-                console.log(data.message); // Confirm rating submission
-                fetchAverageRating(); // Fetch average rating after submission
-            } catch (error) {
-                console.error('Error submitting rating:', error);
-            }
-        }
-
-        async function fetchAverageRating() {
-            try {
-                const response = await fetch('http://localhost:3000/ratings/average');
-                const data = await response.json();
-                const averageRating = data.averageRating ? data.averageRating.toFixed(1) : 'N/A';
-                document.getElementById('average-rating').innerText = `Average Rating: ${averageRating}`;
-            } catch (error) {
-                console.error('Error fetching average rating:', error);
-            }
-        }
-
-        // Call fetchAverageRating on page load to display the average rating
-        window.onload = function() {
-            fetchAverageRating();
-        };
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
