--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 
     <!-- Star Rating Section -->
     <div id="rating">
+    <section id="gallery" class="horizontal-section">
         <h2>Rate Our Site</h2>
         <div id="rating-container">
             <div class="stars" id="stars">
