--- a/index.html
+++ b/index.html
@@ -52,7 +52,34 @@
                 </div>
                 <div class="cat-image" onclick="showModal('just wOw')">
                     <img src="cat10.avif" alt="mad fine lookin aaaah cat ">
-                </div>                
+                </div>
+                    <div class="cat-image" onclick="showModal('just wOw')">
+                    <img src="cat11.avif" alt="mad fine lookin aaaah cat ">
+                </div>    
+                    <div class="cat-image" onclick="showModal('just wOw')">
+                    <img src="cat12.avif" alt="mad fine lookin aaaah cat ">
+                </div>
+                    <div class="cat-image" onclick="showModal('just wOw')">
+                    <img src="cat13.avif" alt="mad fine lookin aaaah cat ">
+                </div>
+                    <div class="cat-image" onclick="showModal('just wOw')">
+                    <img src="cat14.avif" alt="mad fine lookin aaaah cat ">
+                </div>        
+                    <div class="cat-image" onclick="showModal('just wOw')">
+                    <img src="cat15.avif" alt="mad fine lookin aaaah cat ">
+                </div>
+                    <div class="cat-image" onclick="showModal('just wOw')">
+                    <img src="cat16.avif" alt="mad fine lookin aaaah cat ">
+                </div>    
+                    <div class="cat-image" onclick="showModal('just wOw')">
+                    <img src="cat17.avif" alt="mad fine lookin aaaah cat ">
+                </div>
+                    <div class="cat-image" onclick="showModal('just wOw')">
+                    <img src="cat18.avif" alt="mad fine lookin aaaah cat ">
+                </div>
+                    <div class="cat-image" onclick="showModal('just wOw')">
+                    <img src="cat19.avif" alt="mad fine lookin aaaah cat ">
+                </div>
                 <div class="arrow" id="next-arrow">&#10095;</div>
             </div>
         </div>
