--- a/index.html
+++ b/index.html
@@ -53,31 +53,31 @@
                 <div class="cat-image" onclick="showModal('just wOw')">
                     <img src="cat10.avif" alt="mad fine lookin aaaah cat ">
                 </div>
-                    <div class="cat-image" onclick="showModal('just wOw')">
+                <div class="cat-image" onclick="showModal('just wOw')">
                     <img src="cat11.avif" alt="mad fine lookin aaaah cat ">
                 </div>    
-                    <div class="cat-image" onclick="showModal('just wOw')">
+                <div class="cat-image" onclick="showModal('just wOw')">
                     <img src="cat12.avif" alt="mad fine lookin aaaah cat ">
                 </div>
-                    <div class="cat-image" onclick="showModal('just wOw')">
+                <div class="cat-image" onclick="showModal('just wOw')">
                     <img src="cat13.avif" alt="mad fine lookin aaaah cat ">
                 </div>
-                    <div class="cat-image" onclick="showModal('just wOw')">
+                <div class="cat-image" onclick="showModal('just wOw')">
                     <img src="cat14.avif" alt="mad fine lookin aaaah cat ">
                 </div>        
-                    <div class="cat-image" onclick="showModal('just wOw')">
+                <div class="cat-image" onclick="showModal('just wOw')">
                     <img src="cat15.avif" alt="mad fine lookin aaaah cat ">
                 </div>
-                    <div class="cat-image" onclick="showModal('just wOw')">
+                <div class="cat-image" onclick="showModal('just wOw')">
                     <img src="cat16.avif" alt="mad fine lookin aaaah cat ">
                 </div>    
-                    <div class="cat-image" onclick="showModal('just wOw')">
+                <div class="cat-image" onclick="showModal('just wOw')">
                     <img src="cat17.avif" alt="mad fine lookin aaaah cat ">
                 </div>
-                    <div class="cat-image" onclick="showModal('just wOw')">
+                <div class="cat-image" onclick="showModal('just wOw')">
                     <img src="cat18.avif" alt="mad fine lookin aaaah cat ">
                 </div>
-                    <div class="cat-image" onclick="showModal('just wOw')">
+                <div class="cat-image" onclick="showModal('just wOw')">
                     <img src="cat19.avif" alt="mad fine lookin aaaah cat ">
                 </div>
                 <div class="arrow" id="next-arrow">&#10095;</div>
@@ -91,10 +91,8 @@
         <p>Our gallery is dedicated to showcasing the charm, whimsy, and antics of cats from all walks of life.</p>
         <p>Whether you're a devoted cat lover or simply someone who appreciates their delightful personalities,</p>
         <p>you'll find something to brighten your day. Take your time to explore our curated collection of heartwarming</p>
-        <p>cat photos, each capturing a unique moment that highlights their playful spirit and endearing quirks. From</p>
-        <p>fluffy kittens to graceful adult cats, each image tells a story of joy and companionship.</p>
+        <p>cat photos, each capturing a unique moment that highlights their playful spirit and endearing quirks.</p>
         <p>We hope you enjoy browsing through the gallery and that it brings a smile to your face!</p>
-        <p>Feel free to share your favorite images and spread the love for these amazing creatures!</p>
     </section>
 
     <section id="gallery" class="horizontal-section">
@@ -111,8 +109,7 @@
     </section>
 
     <!-- Star Rating Section -->
-    <div id="rating">
-    <section id="gallery" class="horizontal-section">
+    <section id="rating" class="horizontal-section">
         <h2>Rate Our Site</h2>
         <div id="rating-container">
             <div class="stars" id="stars">
@@ -125,7 +122,7 @@
             <p id="average-rating">Average Rating: 0%</p>
             <p id="thank-you-message" style="display: none;">Thank you for your rating! If you have a suggestion, feel free to contact the developer.</p>
         </div>
-    </div>
+    </section>
 
     <footer>
         <p>&copy; 2024 Cute Cat Gallery. Developed by FSXstealth. Idea by dani_blob.</p>
