--- a/index.html
+++ b/index.html
@@ -23,62 +23,62 @@
         <div class="home-content">
             <h2>Cute Cat Gallery</h2>
             <div class="gallery-container">
-                <div class="cat-image" onclick="showModal('FSXStealth cat, known for its playful nature!')">
+                <div class="cat-image" onclick="showModal('FSXStealth Cat', 'Known for its playful nature!')">
                     <img src="cat1.avif" alt="FSXStealth Cat">
                 </div>
-                <div class="cat-image" onclick="showModal('Dani car, a fluffy ball of joy! ready to discover')">
+                <div class="cat-image" onclick="showModal('Dani Car', 'A fluffy ball of joy! Ready to discover')">
                     <img src="cat2.avif" alt="Dani Car">
                 </div>
-                <div class="cat-image" onclick="showModal('OOO1 cat, the lazy cat')">
+                <div class="cat-image" onclick="showModal('OOO1 Cat', 'The lazy cat')">
                     <img src="cat3.avif" alt="OOO1 Cat">
                 </div>
-                <div class="cat-image" onclick="showModal('Sinister aka Bryan cat, just a watcher and a spy')">
-                    <img src="cat4.avif" alt="the Watcher cat lol">
+                <div class="cat-image" onclick="showModal('Sinister aka Bryan Cat', 'Just a watcher and a spy')">
+                    <img src="cat4.avif" alt="The Watcher Cat">
                 </div>
-                <div class="cat-image" onclick="showModal('RiRi cat ')">
-                    <img src="cat5.avif" alt="Cute cat ">
+                <div class="cat-image" onclick="showModal('RiRi Cat', 'Cute and playful')">
+                    <img src="cat5.avif" alt="RiRi Cat">
                 </div>
-                <div class="cat-image" onclick="showModal('LeeDaBee cat')">
-                    <img src="cat6.avif" alt="Looking mad fine cat">
+                <div class="cat-image" onclick="showModal('LeeDaBee Cat', 'Looking mad fine!')">
+                    <img src="cat6.avif" alt="LeeDaBee Cat">
                 </div>
-                <div class="cat-image" onclick="showModal('Yen Cat')">
-                    <img src="cat7.avif" alt="nice cat yen">
+                <div class="cat-image" onclick="showModal('Yen Cat', 'A nice and charming cat')">
+                    <img src="cat7.avif" alt="Yen Cat">
                 </div>
-                <div class="cat-image" onclick="showModal('Leon Cat')">
-                    <img src="cat8.avif" alt="bro got a good looking cat ?">
+                <div class="cat-image" onclick="showModal('Leon Cat', 'Got a good-looking cat?')">
+                    <img src="cat8.avif" alt="Leon Cat">
                 </div>
-                <div class="cat-image" onclick="showModal('SUS CAT')">
-                    <img src="dog8.avif" alt="batman lol">
+                <div class="cat-image" onclick="showModal('SUS Cat', 'Just a funny Batman!')">
+                    <img src="dog8.avif" alt="SUS Cat">
                 </div>
-                <div class="cat-image" onclick="showModal('just wOw')">
-                    <img src="cat10.avif" alt="mad fine lookin aaaah cat ">
+                <div class="cat-image" onclick="showModal('Wow Cat', 'Just Wow!')">
+                    <img src="cat10.avif" alt="Wow Cat">
                 </div>
-                <div class="cat-image" onclick="showModal('just wOw')">
-                    <img src="cat11.avif" alt="mad fine lookin aaaah cat ">
+                <div class="cat-image" onclick="showModal('Wow Cat', 'Just Wow again!')">
+                    <img src="cat11.avif" alt="Wow Cat">
                 </div>    
-                <div class="cat-image" onclick="showModal('just wOw')">
-                    <img src="cat12.avif" alt="mad fine lookin aaaah cat ">
+                <div class="cat-image" onclick="showModal('Wow Cat', 'Another Wow!')">
+                    <img src="cat12.avif" alt="Wow Cat">
                 </div>
-                <div class="cat-image" onclick="showModal('just wOw')">
-                    <img src="cat13.avif" alt="mad fine lookin aaaah cat ">
+                <div class="cat-image" onclick="showModal('Wow Cat', 'Still Wow!')">
+                    <img src="cat13.avif" alt="Wow Cat">
                 </div>
-                <div class="cat-image" onclick="showModal('just wOw')">
-                    <img src="cat14.avif" alt="mad fine lookin aaaah cat ">
+                <div class="cat-image" onclick="showModal('Wow Cat', 'So many wows!')">
+                    <img src="cat14.avif" alt="Wow Cat">
                 </div>        
-                <div class="cat-image" onclick="showModal('just wOw')">
-                    <img src="cat15.avif" alt="mad fine lookin aaaah cat ">
+                <div class="cat-image" onclick="showModal('Wow Cat', 'Incredible looks!')">
+                    <img src="cat15.avif" alt="Wow Cat">
                 </div>
-                <div class="cat-image" onclick="showModal('just wOw')">
-                    <img src="cat16.avif" alt="mad fine lookin aaaah cat ">
+                <div class="cat-image" onclick="showModal('Wow Cat', 'Fabulously fine!')">
+                    <img src="cat16.avif" alt="Wow Cat">
                 </div>    
-                <div class="cat-image" onclick="showModal('just wOw')">
-                    <img src="cat17.avif" alt="mad fine lookin aaaah cat ">
+                <div class="cat-image" onclick="showModal('Wow Cat', 'Look at this fine cat!')">
+                    <img src="cat17.avif" alt="Wow Cat">
                 </div>
-                <div class="cat-image" onclick="showModal('just wOw')">
-                    <img src="cat18.avif" alt="mad fine lookin aaaah cat ">
+                <div class="cat-image" onclick="showModal('Wow Cat', 'This cat is on fire!')">
+                    <img src="cat18.avif" alt="Wow Cat">
                 </div>
-                <div class="cat-image" onclick="showModal('just wOw')">
-                    <img src="cat19.avif" alt="mad fine lookin aaaah cat ">
+                <div class="cat-image" onclick="showModal('Wow Cat', 'Just beautiful!')">
+                    <img src="cat19.avif" alt="Wow Cat">
                 </div>
                 <div class="arrow" id="next-arrow">&#10095;</div>
             </div>
@@ -130,7 +130,9 @@
 
     <div id="modal" class="modal">
         <span class="close" onclick="closeModal()">&times;</span>
+        <h2 id="modal-title"></h2>
         <p id="modal-text"></p>
+        <img id="modal-image" alt="Cat" style="max-width: 100%; height: auto;">
     </div>
 
     <script src="script.js"></script>
