--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="https://discord.gg/nJrA6drUek" target="_blank">Join Us in Discord</a></li>
-            </ul>
-        </nav>
-    </header>
+    <img src="cat-website/logo.webp" alt="Cute Cat Gallery Logo" style="width:150px;">
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="https://discord.gg/nJrA6drUek" target="_blank">Join Us in Discord</a></li>
+        </ul>
+    </nav>
+</header>
 
     <section id="home" class="horizontal-section">
         <div class="home-content">
