--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-    <img src="cat-website/logo.webp" alt="Cute Cat Gallery Logo" style="width:150px;">
+    <img src="images/logo.webp" alt="Cute Cat Gallery Logo" style="width:150px;">
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
