--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-    <img src="cat-website/logo.webp" alt="Cute Cat Gallery Logo" style="width:150px;">
+    <img src="logo.webp" alt="Cute Cat Gallery Logo" style="width:150px;">
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
@@ -25,61 +25,61 @@
             <h2>Cute Cat Gallery</h2>
             <div class="gallery-container">
                 <div class="cat-image" onclick="showModal('FSXStealth Cat', 'Known for its playful nature!')">
-                    <img src="images/cat1.avif" alt="FSXStealth Cat">
+                    <img src="cat1.avif" alt="FSXStealth Cat">
                 </div>
                 <div class="cat-image" onclick="showModal('Dani Car', 'A fluffy ball of joy! Ready to discover')">
-                    <img src="images/cat2.avif" alt="Dani Car">
+                    <img src="cat2.avif" alt="Dani Car">
                 </div>
                 <div class="cat-image" onclick="showModal('OOO1 Cat', 'The lazy cat')">
-                    <img src="images/cat3.avif" alt="OOO1 Cat">
+                    <img src="cat3.avif" alt="OOO1 Cat">
                 </div>
                 <div class="cat-image" onclick="showModal('Sinister aka Bryan Cat', 'Just a watcher and a spy')">
-                    <img src="images/cat4.avif" alt="The Watcher Cat">
+                    <img src="cat4.avif" alt="The Watcher Cat">
                 </div>
                 <div class="cat-image" onclick="showModal('RiRi Cat', 'Cute and playful')">
-                    <img src="images/cat5.avif" alt="RiRi Cat">
+                    <img src="cat5.avif" alt="RiRi Cat">
                 </div>
                 <div class="cat-image" onclick="showModal('LeeDaBee Cat', 'Looking mad fine!')">
-                    <img src="images/cat6.avif" alt="LeeDaBee Cat">
+                    <img src="cat6.avif" alt="LeeDaBee Cat">
                 </div>
                 <div class="cat-image" onclick="showModal('Yen Cat', 'A nice and charming cat')">
-                    <img src="images/cat7.avif" alt="Yen Cat">
+                    <img src="cat7.avif" alt="Yen Cat">
                 </div>
                 <div class="cat-image" onclick="showModal('Leon Cat', 'Got a good-looking cat?')">
-                    <img src="images/cat8.avif" alt="Leon Cat">
+                    <img src="cat8.avif" alt="Leon Cat">
                 </div>
                 <div class="cat-image" onclick="showModal('SUS Cat', 'Just a funny Batman!')">
-                    <img src="images/dog8.avif" alt="SUS Cat">
+                    <img src="dog8.avif" alt="SUS Cat">
                 </div>
                 <div class="cat-image" onclick="showModal('Wow Cat', 'Just Wow!')">
-                    <img src="images/cat10.avif" alt="Wow Cat">
+                    <img src="cat10.avif" alt="Wow Cat">
                 </div>
                 <div class="cat-image" onclick="showModal('Wow Cat', 'Just Wow again!')">
-                    <img src="images/cat11.avif" alt="Wow Cat">
+                    <img src="cat11.avif" alt="Wow Cat">
                 </div>    
                 <div class="cat-image" onclick="showModal('Wow Cat', 'Another Wow!')">
-                    <img src="images/cat12.avif" alt="Wow Cat">
+                    <img src="cat12.avif" alt="Wow Cat">
                 </div>
                 <div class="cat-image" onclick="showModal('Wow Cat', 'Still Wow!')">
-                    <img src="images/cat13.avif" alt="Wow Cat">
+                    <img src="cat13.avif" alt="Wow Cat">
                 </div>
                 <div class="cat-image" onclick="showModal('Wow Cat', 'So many wows!')">
-                    <img src="images/cat14.avif" alt="Wow Cat">
+                    <img src="cat14.avif" alt="Wow Cat">
                 </div>        
                 <div class="cat-image" onclick="showModal('Wow Cat', 'Incredible looks!')">
-                    <img src="images/cat15.avif" alt="Wow Cat">
+                    <img src="cat15.avif" alt="Wow Cat">
                 </div>
                 <div class="cat-image" onclick="showModal('Wow Cat', 'Fabulously fine!')">
-                    <img src="images/cat16.avif" alt="Wow Cat">
+                    <img src="cat16.avif" alt="Wow Cat">
                 </div>    
                 <div class="cat-image" onclick="showModal('Wow Cat', 'Look at this fine cat!')">
-                    <img src="images/cat17.avif" alt="Wow Cat">
+                    <img src="cat17.avif" alt="Wow Cat">
                 </div>
                 <div class="cat-image" onclick="showModal('Wow Cat', 'This cat is on fire!')">
                     <img src="images/cat18.avif" alt="Wow Cat">
                 </div>
                 <div class="cat-image" onclick="showModal('Wow Cat', 'Just beautiful!')">
-                    <img src="images/cat19.avif" alt="Wow Cat">
+                    <img src="cat19.avif" alt="Wow Cat">
                 </div>
                 <div class="arrow" id="next-arrow">&#10095;</div>
             </div>
