--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <img src="cat17.avif" alt="Wow Cat">
                 </div>
                 <div class="cat-image" onclick="showModal('Wow Cat', 'This cat is on fire!')">
-                    <img src="images/cat18.avif" alt="Wow Cat">
+                    <img src="cat18.avif" alt="Wow Cat">
                 </div>
                 <div class="cat-image" onclick="showModal('Wow Cat', 'Just beautiful!')">
                     <img src="cat19.avif" alt="Wow Cat">
